--- a/packages/design-system/global.css
+++ b/packages/design-system/global.css
@@ -16,6 +16,8 @@ a {
 
 * {
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 #__next {
